[gd_scene load_steps=6 format=3 uid="uid://ccsmqq4y3verv"]

[ext_resource type="Script" path="res://src/main/Scenes/choose_profile_menu.gd" id="1_g6oe6"]
[ext_resource type="Theme" uid="uid://dydy7bu3h07i7" path="res://src/main/resources/assets/themes/choose_profile_menu.tres" id="2_4qgbu"]
[ext_resource type="Texture2D" uid="uid://bakxhdk6vgvn0" path="res://src/main/resources/assets/buttons/close_normal.png" id="3_rlyno"]
[ext_resource type="Script" path="res://src/main/Scenes/scaled_button.gd" id="4_2xi6u"]
[ext_resource type="Texture2D" uid="uid://v715hs65u65n" path="res://src/main/resources/assets/buttons/plus_normal.png" id="4_36qt0"]

[node name="ChooseProfileMenu" type="ColorRect"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)
script = ExtResource("1_g6oe6")

[node name="ChooseMenuContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="ChooseMenuContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ChooseMenuContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
mouse_filter = 2

[node name="Control2" type="Control" parent="ChooseMenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="ChooseMenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 13.55
theme = ExtResource("2_4qgbu")

[node name="MarginContainer2" type="MarginContainer" parent="ChooseMenuContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2"]
layout_mode = 2

[node name="HBoxContainer2" type="Control" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control2" type="Control" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 5.8
text = "Profile menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="TextureButton" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer2/HBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -62.5
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_rlyno")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_2xi6u")

[node name="MarginContainer" type="MarginContainer" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.5
theme_override_constants/margin_top = 35

[node name="ScrollContainer" type="ScrollContainer" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.5
mouse_filter = 0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ProfileItemContainer" type="VBoxContainer" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddProfileItem" type="MarginContainer" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/ProfileItemContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 164)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/ProfileItemContainer/AddProfileItem"]
layout_mode = 2

[node name="AddButton" type="TextureButton" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/MarginContainer/ScrollContainer/ProfileItemContainer/AddProfileItem/AspectRatioContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_36qt0")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_2xi6u")

[node name="HBoxContainer" type="HBoxContainer" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="MarginContainer2" type="MarginContainer" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 10

[node name="ChooseButton" type="Button" parent="ChooseMenuContainer/HBoxContainer/PanelContainer/MarginContainer2/VBoxContainer/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Choose"
script = ExtResource("4_2xi6u")
power_of_scale = 0.97

[node name="Control" type="Control" parent="ChooseMenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Control2" type="Control" parent="ChooseMenuContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
